# evoclip

./: .gitignore  README.md  pyproject.toml  supervisord.conf
agent/: evaluator.py  main_agent.py  mcp_client.py  optimizer.py
api/: main.py
api/routes/: events.py  tasks.py
api/schemas/: task.py
config/: config.template.yaml  config.yaml  settings.py
config/dictionaries/: prohibited_words.txt
config/prompts/: copy_generation.yaml  skill_optimization.yaml
doc/: 实现方案.md  环境配置说明.md  需求分析.md  项目使用说明.md
openspec/: config.yaml
scripts/: generate_fixture_video.sh  init_db.py  init_redis.py  init_storage.py  run_e2e.sh
skills/: common.py
skills/copy_generation/: prompt_builder.py  server.py
skills/quality_evaluation/: prohibited_checker.py  server.py  sync_checker.py  visual_checker.py
skills/skill_optimization/: memory_store.py  server.py
skills/video_analysis/: frame_extractor.py  server.py  speech_recognizer.py  vision_adapter.py
skills/video_render/: ffmpeg_wrapper.py  server.py
skills/voice_synthesis/: server.py  tts_adapter.py
store/: database.py  minio_client.py  models.py  redis_client.py
tests/agent/: test_main_agent.py
tests/api/: test_tasks_api.py
tests/e2e/: test_pipeline_e2e.py
tests/fixtures/: product_description.txt
tests/skills/: test_copy_generation.py  test_quality_evaluation.py  test_skill_optimization.py  test_tts_adapter.py  test_video_analysis.py  test_video_render.py  test_voice_synthesis.py  (+1 more)
web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+23 files in other folders)
